--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ h1,h2, h3, .h1, .h2, .h3{
 .mobile-header-img{
     display: block;
     width:100%;
-    height:240px;
-    background-image: url(./img/dabronx-artwork-by-loogart.png);
+    height:350px;
+    background-image: url(./img/mobile-header.png);
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: 120%;
+    background-size: 130%;
 }
